# galho-virtio-net

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
docs/: protocol.md
src/: lib.rs
